<resources>
    <string name="app_name">Traala-Driver</string>
    <string name="CONSUMER_KEY">1EewsDHADPZl3KV0mPk0mwkxK</string>
    <string name="CONSUMER_SECRET">ROsJZjZBVrMTqDcOFO7EngcmuaubL9AZ1qKXdd5RTSaN9klxCa</string>

    <string name="title_activity_maps">Traala-Driver</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string><!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_details">View Details</string>
    <string name="pickup_address">PICKUP ADDRESS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="map">Map</string>
    <string name="login">Login</string>
    <string name="confirmation_accept">Accept</string>
    <string name="confirmation_cancel">Cancel</string>
    <string name="ride_history">Ride History</string>
    <string name="internet_connection">Please check your internet connection and try again</string>
    <string name="my_booking">My Bookings</string>
    <string name="consumer_secret">ROsJZjZBVrMTqDcOFO7EngcmuaubL9AZ1qKXdd5RTSaN9klxCa</string>

    <string name="consumer_key">1EewsDHADPZl3KV0mPk0mwkxK</string>
    <string name="setting">Setting</string>

    <string name="description_create">fhjhjfdh</string>
    <string name="descriptionn">Traala, LLC. is a technology company that \n provides a dispatching to cab/car service \n
        companies. To access you must specify your\n
        prefered cab/car service company.
    </string>

    //Twitter -----

    <string name="com.twitter.sdk.android.CONSUMER_KEY">1EewsDHADPZl3KV0mPk0mwkxK</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">ROsJZjZBVrMTqDcOFO7EngcmuaubL9AZ1qKXdd5RTSaN9klxCa</string>
    <!--
   <string name="google_android_map_api_key_none">AIzaSyCgCisN2V6RkAWoqT1SpgetqejcDuHsRYA</string>
-->
    <!--<string name="google_android_map_api_key_none">AIzaSyDiZhhJqvheIOhxmCS5zdahobWwtdJnq2o</string>-->
    <string name="google_android_map_api_key_none">AIzaSyDIyHNW33sg-dhV3tzVP_XFNkUIstsRuRM</string>
    <string name="google_android_map_api_key_v2">AIzaSyDIyHNW33sg-dhV3tzVP_XFNkUIstsRuRM</string>
    <string name="google_android_map_api_key_server">AIzaSyD29Wwqna7uhKeTovB2FQl9SfZ2rMGqVro</string>
    //End ------
    <string name="facebook_app_id">180910315903466</string>
    <string name="fb_login_protocol_scheme">fb180910315903466</string>
    <string name="facebook_app_id_accountKit">200287624018295</string>
    <string name="Account_kit_client_token">247d9caaf2d9c3167d1edf752ba7c3dc</string>
    <string name="Account_protocol_scheme">fb247d9caaf2d9c3167d1edf752ba7c3dc</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>

    <string name="free_rides">Send your free friends  \n free rides  </string>
    <string name="free_ride_desp">Share the traala love and give friends free \n  rides To try Traala, worth upto try $1 each! </string>
    <string name="free_rides_invite"> How Invites Work </string>
    <string name="daily_earning"> Daily Earning </string>
    <string name="montly_earning"> Monthly Earning </string>
    <string name="weekly_earning"> Weekly Earning </string>

    <string name="ResetPassword">Reset Password</string>
    <string name="free_whtsapp">Whatsapp</string>
    <string name="share_code">Share Your Invite Code</string>
    <string name="submit">Submit</string>
    <string name="no_record_found">Sorry! No Matching record found \n in the preselection database</string>
    <string name="privacy">I have read,understand and agree to </string>
    <string name="trip_start">Slide to Begin Trip</string>
    <string name="complete_trip">Slide to Complete Trip</string>
    <string name="trip_new">350 5th Ave \n New York,NY018 USA \n Empire State Building</string>
    <string name="settings">Setting</string>
    <string name="reg2_lbl_desc">I have read,understand and agree to  </string><!--  <string name="creat_account_title">CREATE ACCOUNT</string>
-->
    <string name="create_account">Cabscout,LLC is a technology company that provides a dispatching to cab/car service compa-nies. To Access you must specify your preferred cab/car service cmpany</string>
    <string name="name">Name</string>
    <string name="forgot_text"> We just need your registered email address \n to send you password reset</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="query">I want to know my last ride details.</string>
    <string name="send">Send</string>
    <string name="getIntouch">You can Get in touch our 24/7 customer service any time.</string>

    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_login1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="type_query"> Enter your Messages</string>
</resources>