<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:id="@+id/linear1_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <include
                android:id="@+id/toolbar"
                layout="@layout/free_ride_toolbar" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tx_desp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="2dp"
                android:text="@string/free_rides"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tx_ride_desp"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/free_ride_desp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tx_howInvike"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/free_rides_invite"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:id="@+id/ic_icon_img"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_icon_share_img" />
        </LinearLayout>
        <TextView
            android:id="@+id/txes"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.04"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight=".08"
            android:background="@drawable/btn_design"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".90"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/share_code"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight=".10"
                android:padding="5dp"
                android:src="@drawable/ic_icon_share" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_next"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.08"
            android:background="@drawable/button_design"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/txReset"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/free_whtsapp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
        <TextView
            android:id="@+id/txRes"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>