<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <include layout="@layout/contact_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_mail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="5dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_design"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_email" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lblemail"
                            android:gravity="bottom"
                            android:text="@string/email"
                            android:padding="2dp"
                            android:fontFamily="@font/montserratsemibold"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="txt@gmail.com"
                            android:fontFamily="@font/montserratsemibold"
                            android:id="@+id/lblEmailValue"
                            android:gravity="center_vertical"
                            android:padding="2dp"

                            />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/cardView_phone"
            android:layout_marginTop="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="5dp"
            card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_design"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_phone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:padding="2dp"
                    android:id="@+id/lbl_phone"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/montserratsemibold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_phoneValue"
                    android:gravity="center|start"
                    android:padding="2dp"
                    android:text="(123) 654 456 784"
                    android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:padding="5dp"
                android:layout_margin="20dp"
                android:fontFamily="@font/montserratmedium"
                android:id="@+id/lblBottom"
                android:text="@string/getIntouch"/>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
